F&GDEV/src/objects/Support_Case__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <inlineHelpText>What Account is this related to? This field helps understand support request origination.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Support Cases</relationshipLabel>
        <relationshipName>Support_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Anti_Virus_Installed__c</fullName>
        <label>Anti-Virus Installed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>Tehnical: disconnected desktop software, problems with installing, etc.
Illustration/Calculator: numbers in illustration don&apos;t make sense, etc.
New Business: why doesn&apos;t my policy exist, power producer standings, general account management, etc.</inlineHelpText>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Illustration Technical</fullName>
                </value>
                <value>
                    <fullName>Illustration/Calculator</fullName>
                </value>
                <value>
                    <fullName>New Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Support Cases</relationshipLabel>
        <relationshipName>Support_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Response_Date__c</fullName>
        <label>First Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Response_to_Resolved__c</fullName>
        <formula>Resolved_Date__c  - First_Response_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days between first response date and resolved date.</inlineHelpText>
        <label>First Response to Resolved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MGA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MGA</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Support Cases (MGA)</relationshipLabel>
        <relationshipName>Support_Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meets_System_Requirements__c</fullName>
        <label>Meets System Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Ask</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Problem_Description__c</fullName>
        <label>Problem Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reported_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Reported Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reported_to_First_Response__c</fullName>
        <formula>Resolved_Date__c - Reported_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days between first response date and resolved date.</inlineHelpText>
        <label>Reported to First Response</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reported_to_Resolved__c</fullName>
        <formula>Resolved_Date__c - Reported_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days between reported date and resolved date.</inlineHelpText>
        <label>Reported to Resolved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolved_Date__c</fullName>
        <label>Resolved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Software_Worked__c</fullName>
        <label>Software Worked?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Ask</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adobe Not Default PDF Viewer</fullName>
                </value>
                <value>
                    <fullName>Apache</fullName>
                </value>
                <value>
                    <fullName>Below System Requirements</fullName>
                </value>
                <value>
                    <fullName>Compatibility</fullName>
                </value>
                <value>
                    <fullName>Connectivity</fullName>
                </value>
                <value>
                    <fullName>Corrupt Installation</fullName>
                </value>
                <value>
                    <fullName>Defect</fullName>
                </value>
                <value>
                    <fullName>Filing Reports</fullName>
                </value>
                <value>
                    <fullName>IE 10 Zoom</fullName>
                </value>
                <value>
                    <fullName>IE 9</fullName>
                </value>
                <value>
                    <fullName>Install</fullName>
                </value>
                <value>
                    <fullName>iPad</fullName>
                </value>
                <value>
                    <fullName>MSSQL&amp;COSSNET</fullName>
                </value>
                <value>
                    <fullName>Pop-Up Blocker</fullName>
                </value>
                <value>
                    <fullName>REQ</fullName>
                </value>
                <value>
                    <fullName>Server Error</fullName>
                </value>
                <value>
                    <fullName>SQL Express Service Failed</fullName>
                </value>
                <value>
                    <fullName>Unknown Edit Error: 5</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
                <value>
                    <fullName>User &quot;SA&quot; Error</fullName>
                </value>
                <value>
                    <fullName>Virus/Malware</fullName>
                </value>
                <value>
                    <fullName>WIN8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Windows_Update__c</fullName>
        <label>Windows Updated?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>iPipeline_Case__c</fullName>
        <label>iPipeline Case #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Support Case</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SUP-{0000000000}</displayFormat>
        <label>Support Case Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Cases</pluralLabel>
    <recordTypes>
        <fullName>Illustration_Calculator</fullName>
        <active>true</active>
        <description>Numbers in illustration don&apos;t make sense, etc.</description>
        <label>Illustration/Calculator</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Business</fullName>
        <active>true</active>
        <description>Why doesn&apos;t my policy exist, power producer standings, general account management, etc.</description>
        <label>New Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical</fullName>
        <active>true</active>
        <description>Tehnical: disconnected desktop software, problems with installing, etc.</description>
        <label>Technical</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>